--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" class="no-js">
 
 <head>
+    <script type="text/javascript">(function(c,l,a,r,i,t,y){c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};t=l.reateElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);})window, document, "clarity", "script", "eaft6oyq1h");</script>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +12,6 @@
     <script src="https://unpkg.com/animejs@3.0.1/lib/anime.min.js"></script>
     <script src="https://unpkg.com/scrollreveal@4.0.0/dist/scrollreveal.min.js"></script>
 </head>
-
 <body class="is-boxed has-animations" style="height: 100%;">
     <div class="body-wrap">
         <header class="site-header">
@@ -25,7 +25,6 @@
                 </div>
             </div>
         </header>
-
         <main>
             <section class="hero">
                 <div class="container">
@@ -33,12 +32,11 @@
                         <div class="hero-copy">
                             <h1 class="hero-title mt-0">nagero.net</h1>
                             <p class="hero-paragraph"></p>
-
                         </div>
                         <div class="hero-figure anime-element">
-                            <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
-								<rect width="528" height="396" style="fill:transparent;"></rect>
-							</svg>
+                        <svg class="placeholder" width="528" height="396" viewBox="0 0 528 396">
+				<rect width="528" height="396" style="fill:transparent;"></rect>
+				</svg>
                             <div class="hero-figure-box hero-figure-box-01" data-rotation="45deg" style="transform: rotate(45deg) scale(1); opacity: 1;"></div>
                             <div class="hero-figure-box hero-figure-box-02" data-rotation="-45deg" style="transform: rotate(-45deg) scale(1); opacity: 1;"></div>
                             <div class="hero-figure-box hero-figure-box-03" data-rotation="0deg" style="transform: rotate(0deg) scale(1); opacity: 1;"></div>
@@ -53,29 +51,15 @@
                     </div>
                 </div>
             </section>
-
-
-
-
-
-
         </main>
-
         <footer class="site-footer">
             <div class="container">
                 <div class="site-footer-inner">
-
-
-
-
                 </div>
             </div>
         </footer>
     </div>
-
     <script src="dist/js/main.min.js"></script>
-
-
 </body>
 
 </html>
